--- a/cadastro.html
+++ b/cadastro.html
@@ -8,16 +8,11 @@
     <title>Cadastro e Login</title>
     <link rel="stylesheet" href="css/final.css">
     <style>
-        /* :root {
-            --roxo: #A200CB;
-        }
         /*Conteúdo*/
-        main {
+
+        .cadastro_cadlog {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-image: url(img/bannerpho.png);
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center;
+            padding: 40px;
         }
 
         .cards_cadlog {
@@ -25,52 +20,68 @@
             margin: auto;
             display: flex;
             justify-content: space-around;
-            margin-top: 50px;
-            margin-bottom: 50px;
         }
 
-        .card_1_cadlog {
+        .campo_cadastrousuario {
             display: flex;
-            flex-direction: column;
-            border: solid 1px #707070;
-            border-radius: 8px;
-            padding: 0px 30px;
-            height: 250px;
             justify-content: center;
-            widows: 200px;
-            background-color: white;
+            padding: 10px;
         }
 
-        .card_2_cadlog {
+        .descricao {
+            font-size: 15px;
+            padding: 10px;
+            width: 390px;
+            text-align: center;
+            margin: auto;
+        }
+
+        .campo_cadastrousuario input {
+            border: solid 1px var(--cinza);
+            padding: 10px;
+            width: 355px;
+        }
+
+        .card_cadastro {
             display: flex;
             flex-direction: column;
-            width: 200px;
-            border: solid 1px #707070;
-            border-radius: 8px;
-            padding: 0px 30px;
-            padding-bottom: 50px;
+            width: 600px;
+            /* border: solid 1px #707070; */
+            border-radius: 4px;
+            /* padding: 0px 30px; */
+            padding-bottom: 30px;
             justify-content: center;
             background-color: white;
+            -webkit-box-shadow: 0px 0px 8px 0px rgba(204, 204, 204, 1);
+            -moz-box-shadow: 0px 0px 8px 0px rgba(204, 204, 204, 1);
+            box-shadow: 0px 0px 8px 0px rgba(204, 204, 204, 1);
         }
 
+        .card_cadastro h2 {
+            font-size: 35px;
+            padding: 20px;
+            color: var(--roxo);
+            text-transform: uppercase;
+        }
 
-        .cadastro_cadlog {
+        .cadastrousuario {
+            background-image: url(../img/bannerpho.png);
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+
             display: flex;
-            flex-direction: column;
-            padding: 5px 0px;
+            justify-content: center;
+            padding: 40px 0px;
         }
 
-        .card_2 form input {
-            width: 160px;
-        }
-
-        h3,
+        /* h3,
         label,
         input {
             color: #707070;
-        }
+        } */
 
-        h3 {
+        h2 {
             text-align: center;
             padding-top: 20px;
             padding-bottom: 15px;
@@ -90,7 +101,7 @@
             display: flex;
             justify-content: center;
             margin: auto;
-            padding-bottom: 10px;
+            padding: 10px;
         }
 
         button {
@@ -99,6 +110,9 @@
             border-radius: 4px;
             border: solid 1px var(--roxo);
             color: white;
+            width: 380px;
+            font-size: 20px;
+            text-transform: uppercase;
         }
 
         @media (max-width: 1024px) {
@@ -213,68 +227,69 @@
         </div>
     </header>
     <main>
-        <div class="cadastroelogin_pag">
-            <div class="cards_cadlog">
-                <div class="card_2_cadlog">
-                    <h3>CADASTRAR-SE</h3>
-                    <form method="POST">
-                        <div class="cadastro_cadlog">
-                            <label>Nome</label>
-                            <input type="text" placeholder="Digite o nome completo..."
-                                aria-label="Digite o nome completo..." name="nome" required>
-                        </div>
-                        <div class="cadastro_cadlog">
-                            <label>CPF</label>
-                            <input type="text" placeholder="Digite seu CPF..." aria-label="Digite seu CPF..." name="cpf"
-                                required>
-                        </div>
-                        <div class="cadastro_cadlog">
-                            <label>Idade</label>
-                            <input type="text" placeholder="Digite sua idade" aria-label="Digite sua idade.."
-                                name="idade" required>
-                        </div>
-                        <div class="cadastro_cadlog">
-                            <label>Telefone</label>
-                            <input type="text" placeholder="Digite seu telefone..." aria-label="Digite seu telefone..."
-                                name="tel" required>
-                        </div>
-                        <div class="cadastro_cadlog">
-                            <label>CEP</label>
-                            <input type="text" placeholder="Digite seu CEP..." aria-label="Digite seu CEP..." name="cep"
-                                required>
-                        </div>
-                        <div class="cadastro_cadlog">
-                            <label>Endereço</label>
-                            <input type="text" placeholder="Digite seu endereço..." aria-label="Digite seu endereço..."
-                                name="endereco" required>
-                        </div>
-                        <div class="cadastro_cadlog">
-                            <label>Número</label>
-                            <input type="text" placeholder="Digite o número da casa..."
-                                aria-label="Digite o número da casa..." name="numero" required>
-                        </div>
-                        <div class="cadastro_cadlog">
-                            <label>Bairro</label>
-                            <input type="text" placeholder="Digite seu bairro..." aria-label="Digite seu bairro..."
-                                name="bairro" required>
-                        </div>
-                        <div class="cadastro_cadlog">
-                            <label>E-mail</label>
-                            <input type="email" placeholder="Digite seu e-mail..." aria-label="Digite seu e-mail..."
-                                name="email" required>
-                        </div>
-                        <div class="cadastro_cadlog">
-                            <label>Senha</label>
-                            <input type="password" placeholder="Digite sua senha..." aria-label="Digite sua senha..."
-                                name="senha" required>
-                        </div>
-                        <div class="btn_cadlog">
-                            <button type="submit"><b>CADASTRAR</b></button>
-                        </div>
-                    </form>
+
+        <div class="fundoCadastro">
+            <section class="card_cadastro">
+
+                <h2>CADASTRE-SE</h2>
+
+                <div class="descricao">
+                    <p>Cadastre-se para poder efetuar reservas em nossa aplicação e aproveitar as ofertas.</p>
                 </div>
-            </div>
+
+                <form method="POST">
+                    <div class="campo_cadastrousuario">
+                        <!-- <label>Nome</label> -->
+                        <input type="text" placeholder="Nome completo" aria-label="Digite o nome completo" name="nome"
+                            required>
+                    </div>
+                    <div class="campo_cadastrousuario">
+                        <!-- <label>CPF</label> -->
+                        <input type="text" placeholder="CPF ou CNPJ" aria-label="Digite seu CPF ou CNPJ"
+                            name="documento" required>
+                    </div>
+                    <div class="campo_cadastrousuario">
+                        <!-- <label>Idade</label> -->
+                        <input type="text" placeholder="Idade" aria-label="Digite sua idade" name="idade" required>
+                    </div>
+                    <div class="campo_cadastrousuario">
+                        <!-- <label>Telefone</label> -->
+                        <input type="text" placeholder="Telefone" aria-label="Digite seu telefone" name="tel" required>
+                    </div>
+                    <div class="campo_cadastrousuario">
+                        <!-- <label>CEP</label> -->
+                        <input type="text" placeholder="CEP" aria-label="Digite seu CEP" name="cep" required>
+                    </div>
+                    <div class="campo_cadastrousuario">
+                        <!-- <label>Endereço</label> -->
+                        <input type="text" placeholder="Endereço" aria-label="Digite seu endereço" name="endereco"
+                            required>
+                    </div>
+                    <!-- <div class="cadastro_cadlog">
+                         <label>Número</label> 
+                        <input type="text" placeholder="Número da casa"
+                            aria-label="Digite o número da casa..." name="numero" required>
+                    </div> -->
+                    <div class="campo_cadastrousuario">
+                        <!-- <label>Bairro</label> -->
+                        <input type="text" placeholder="Bairro" aria-label="Digite seu bairro" name="bairro" required>
+                    </div>
+                    <div class="campo_cadastrousuario">
+                        <!-- <label>E-mail</label> -->
+                        <input type="email" placeholder="E-mail" aria-label="Digite seu e-mail" name="email" required>
+                    </div>
+                    <div class="campo_cadastrousuario">
+                        <!-- <label>Senha</label> -->
+                        <input type="password" placeholder="Senha" aria-label="Digite sua senha" name="senha" required>
+                    </div>
+                    <div class="btn_cadlog">
+                        <button type="submit">CADASTRAR</button>
+                    </div>
+                </form>
+            </section>
+
         </div>
+
     </main>
     <footer>
         <p>SMART SALE ©2019</p>
