--- a/cadastrodevendedor.html
+++ b/cadastrodevendedor.html
@@ -1,54 +1,52 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cadastro de Vendedor</title>
-    <link rel="stylesheet" href="css/final.css">    
+    <link rel="stylesheet" href="css/final.css">
 </head>
+
 <body>
     <header>
         <div class="contHeader">
-        <div class="container">
-            <div class="ca">
-                <div class="logo">
-                    <a href="home.html"><img src="img/Agrupar 110.png" title="Home Smart Sale" alt="logo smart sale"></a>
+            <div class="container">
+                <div class="ca">
+                    <div class="logo">
+                        <a href="home.html"><img src="img/Agrupar 110.png" title="Home Smart Sale"
+                                alt="logo smart sale"></a>
+                    </div>
+                    <input type="search" placeholder="Buscar produtos, marcas e muito mais ..."
+                        aria-label="Faça uma busca" name="search">
+                    <div class="botao-login">
+                        <a href="loginCadastro.html"><img src="img/avatar.png" alt="Link para fazer login"
+                                title="Faça login" id="entrar">
+                            <p>Entrar</p>
+                        </a>
+                    </div>
                 </div>
-                <input type="search" placeholder="Buscar produtos, marcas e muito mais ..." aria-label="Faça uma busca" name="search">
-                <div class="botao-login">
-                    <a href="loginCadastro.html"><img src="img/avatar.png" alt="Link para fazer login" title="Faça login" id="entrar">
-                        <p>Entrar</p>
-                    </a>
-                </div>
+                <button class="btn-menu"><i class="fa fa-bars fa-lg"></i></button>
+                <a class="btn-close"><i class="fa fa-times"></i></a>
+                <nav>
+                    <div class="menu-centro">
+                        <ul class="menu">
+                            <li><a href="home.html" title="Smart sale home">Home</a></li>
+                            <li><a href="quemsomos.html" title="Smart sale quem somos">Quem somos</a></li>
+                            <li><a href="ONG's.html" title="Smart sale ongs">ONGs</a></li>
+                            <li><a href="paginaRanking.html" title="Smart sale ranking">Ranking</a></li>
+                            <li><a href="filtroProdutos.html" title="Smart sale categorias">Ofertas</a></li>
+                            <li><a href="perfil.html" title="Smart sale perfil">Perfil</a></li>
+                            <li><a href="PerguntasFrequentes.html" title="Smart sale faq">FAQ</a></li>
+                        </ul>
+                    </div>
+                </nav>
             </div>
-            <button class="btn-menu"><i class="fa fa-bars fa-lg"></i></button>
-            <a class="btn-close"><i class="fa fa-times"></i></a>
-            <nav>
-                <div class="menu-centro">
-                    <ul class="menu">
-                        <li><a href="home.html" title="Smart sale home">Home</a></li>
-                        <li><a href="quemsomos.html" title="Smart sale quem somos">Quem somos</a></li>
-                        <li><a href="ONG's.html" title="Smart sale ongs">ONGs</a></li>
-                        <li><a href="paginaRanking.html" title="Smart sale ranking">Ranking</a></li>
-                        <li><a href="filtroProdutos.html" title="Smart sale categorias">Ofertas</a></li>
-                        <li><a href="perfil.html" title="Smart sale perfil">Perfil</a></li>
-                        <li><a href="PerguntasFrequentes.html" title="Smart sale faq">FAQ</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
         </div>
     </header>
     <main>
         <div class="cardscadastrovendedor">
-            <div class="informacao_cadastrovendedor">
-                <h3>Informação</h3>
-                <p>
-                    Neste campo você vendedor poderá realizar seu cadastro para poder vender seus produtos em nossa
-                    plataforma
-                </p>
-            </div>
             <div class="cadvend_cadastrovendedor">
                 <h3>Cadastre um Vendedor</h3>
                 <form method="POST">
