pagina reserva arrumada

--- a/finalDaReserva.html
+++ b/finalDaReserva.html
@@ -51,17 +51,22 @@
             <div class="container">
                 <section class="esquerdo">
                     <div class="texto">
-                        <h1>Final da Reserva</h1>
-                        <h3>Seu produto foi reservado com sucesso!</h3>
+                        <h2>Seu produto foi reservado com sucesso!</h2>
                     </div>
                     <div class="textos2">
                         <p>Detalhes da Reserva</p>
-                        <P>Data de entrega: 10/12/2019</P>
-                        <p>Quantidade: X</p>
+                        <P>Data da compra: 10/12/2019</P>
+                        <P>Data limite para retirada: 20/12/2019</P>
+                        <p>Quantidade: 1</p>
+                        <P>Vendedor: Ana Cláudia Souza</P>
+                        <P>Valor final: R$50,00</P>
                     </div>
                 </section>
                 <section class="direito">
-                    <img src="./img/E11-3505-006_zoom1.jpg" alt="Imagem do produto, Tamanco Salto Alto">
+                    <div class="prodnome">
+                        <img src="./img/E11-3505-006_zoom1.jpg" alt="Imagem do produto, Tamanco Salto Alto">
+                        <p>Salto Alto tamanho 36</p>
+                    </div>
                 </section>
             </div>
         </div>
