página da reserva alterada

--- a/finalDaReserva.html
+++ b/finalDaReserva.html
@@ -56,16 +56,21 @@
                     <div class="textos2">
                         <p>Detalhes da Reserva</p>
                         <P>Data da compra: 10/12/2019</P>
-                        <P>Data limite para retirada: 20/12/2019</P>
                         <p>Quantidade: 1</p>
                         <P>Vendedor: Ana Cláudia Souza</P>
                         <P>Valor final: R$50,00</P>
+                    </div>
+                    <div class="btncompras">
+                        <button>Continue comprando</button>
                     </div>
                 </section>
                 <section class="direito">
                     <div class="prodnome">
                         <img src="./img/E11-3505-006_zoom1.jpg" alt="Imagem do produto, Tamanco Salto Alto">
-                        <p>Salto Alto tamanho 36</p>
+                        <div class="desc">
+                            <p>Salto Alto tamanho 36</p>
+                            <p>Reservado até 20/12/2019</p>
+                        </div>
                     </div>
                 </section>
             </div>
