home responsiva e login arrumado

--- a/home.html
+++ b/home.html
@@ -214,10 +214,12 @@
     <script>
         $(".btn-menu").click(function () {
             $(".menu").show();
+            $(".whitebox").hide();
             $(".btn-close").show();
         });
         $(".btn-close").click(function () {
             $(".menu").hide();
+            $(".whitebox").show();
             $(".btn-close").hide();
         });
     </script>
