--- a/loginCadastro.html
+++ b/loginCadastro.html
@@ -12,125 +12,76 @@
 <body>
     <header>
         <div class="contHeader">
-        <div class="container">
-            <div class="ca">
-                <div class="logo">
-                    <a href="home.html"><img src="img/Agrupar 110.png" title="Home Smart Sale" alt="logo smart sale"></a>
+            <div class="container">
+                <div class="ca">
+                    <div class="logo">
+                        <a href="home.html"><img src="img/Agrupar 110.png" title="Home Smart Sale"
+                                alt="logo smart sale"></a>
+                    </div>
+                    <input type="search" placeholder="Buscar produtos, marcas e muito mais ..."
+                        aria-label="Faça uma busca" name="search">
+                    <div class="botao-login">
+                        <a href="loginCadastro.html"><img src="img/avatar.png" alt="Link para fazer login"
+                                title="Faça login" id="entrar">
+                            <p>Entrar</p>
+                        </a>
+                    </div>
                 </div>
-                <input type="search" placeholder="Buscar produtos, marcas e muito mais ..." aria-label="Faça uma busca" name="search">
-                <div class="botao-login">
-                    <a href="loginCadastro.html"><img src="img/avatar.png" alt="Link para fazer login" title="Faça login" id="entrar">
-                        <p>Entrar</p>
-                    </a>
-                </div>
+                <button class="btn-menu"><i class="fa fa-bars fa-lg"></i></button>
+                <a class="btn-close"><i class="fa fa-times"></i></a>
+                <nav>
+                    <div class="menu-centro">
+                        <ul class="menu">
+                            <li><a href="home.html" title="Smart sale home">Home</a></li>
+                            <li><a href="quemsomos.html" title="Smart sale quem somos">Quem somos</a></li>
+                            <li><a href="ONG's.html" title="Smart sale ongs">ONGs</a></li>
+                            <li><a href="paginaRanking.html" title="Smart sale ranking">Ranking</a></li>
+                            <li><a href="filtroProdutos.html" title="Smart sale categorias">Ofertas</a></li>
+                            <li><a href="perfil.html" title="Smart sale perfil">Perfil</a></li>
+                            <li><a href="PerguntasFrequentes.html" title="Smart sale faq">FAQ</a></li>
+                        </ul>
+                    </div>
+                </nav>
             </div>
-            <button class="btn-menu"><i class="fa fa-bars fa-lg"></i></button>
-            <a class="btn-close"><i class="fa fa-times"></i></a>
-            <nav>
-                <div class="menu-centro">
-                    <ul class="menu">
-                        <li><a href="home.html" title="Smart sale home">Home</a></li>
-                        <li><a href="quemsomos.html" title="Smart sale quem somos">Quem somos</a></li>
-                        <li><a href="ONG's.html" title="Smart sale ongs">ONGs</a></li>
-                        <li><a href="paginaRanking.html" title="Smart sale ranking">Ranking</a></li>
-                        <li><a href="filtroProdutos.html" title="Smart sale categorias">Ofertas</a></li>
-                        <li><a href="perfil.html" title="Smart sale perfil">Perfil</a></li>
-                        <li><a href="PerguntasFrequentes.html" title="Smart sale faq">FAQ</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
         </div>
     </header>
     <main>
         <div class="login_pag">
-        <!-- <div class="container"> -->
-        <div class="cards_cadlog">
-            <div class="imgLoginCad"></div>
-            <div class="contCard_1_cadlog">
-            <div class="card_1_cadlog">
-                <h3>FAÇA LOGIN</h3>
-                <form id=loginForm method="POST">
-                    <div class="login_cadlog">
-                        <label>Usuário</label>
-                        <input type="text" placeholder="Digite seu nome..." aria-label="Digite seu nome..."
-                            name="usuario" required>
-                    </div>
-                    <div class="login_cadlog">
-                        <label>Senha</label>
-                        <input type="password" placeholder="Digite sua senha..." aria-label="Digite sua senha..."
-                            name="senha" required>
-                    </div>
-                    <div class="btn_cadlog">
-                        <button type="submit"><b>ACESSAR</b></button>
-                    </div>
-                    <div class="btn_cadastrarse">
-                            <!-- <button type="button"><b>CADASTRE-SE</b></button> -->
-                            <a href="#">Cadastre-se</a>
+            <!-- <div class="container"> -->
+            <div class="cards_cadlog">
+                <div class="imgLoginCad">
+                    <!-- imagem da esquerda -->
+                </div>
+                <div class="contCard_1_cadlog">
+                    <!-- div do fundo da direita -->
+                    <div class="card_1_cadlog">
+                        <!-- card do formulário, contém tudo -->
+                        <h3>FAÇA LOGIN</h3>
+                        <div class="fomrLogin">
+                            <form method="POST">
+                                <div class="login_cadlog">
+                                    <!-- <label>Usuário</label> -->
+                                    <input type="text" placeholder="E-mail" aria-label="Digite seu e-mail"
+                                        name="usuario" required>
+                                </div>
+                                <div class="login_cadlog">
+                                    <!-- <label>Senha</label> -->
+                                    <input type="password" placeholder="Senha" aria-label="Digite sua senha"
+                                        name="senha" required>
+                                </div>
+                                <div class="btn_cadlog">
+                                    <button type="submit"><b>ACESSAR</b></button>
+                                </div>
+                                <div class="btn_cadastrarse">
+                                    <!-- <button type="button"><b>CADASTRE-SE</b></button> -->
+                                    <a href="cadastro.html">Cadastre-se</a>
+                                </div>
+                            </form>
                         </div>
-                </form>
+                    </div>
+                </div>
             </div>
-            <!-- <div class="card_2_cadlog">
-                <h3>CADASTRAR-SE</h3>
-                <form method="POST">
-                    <div class="cadastro_cadlog">
-                        <label>Nome</label>
-                        <input type="text" placeholder="Digite o nome completo..."
-                            aria-label="Digite o nome completo..." name="nome" required>
-                    </div>
-                    <div class="cadastro_cadlog">
-                        <label>CPF</label>
-                        <input type="text" placeholder="Digite seu CPF..." aria-label="Digite seu CPF..." name="cpf"
-                            required>
-                    </div>
-                    <div class="cadastro_cadlog">
-                        <label>Idade</label>
-                        <input type="text" placeholder="Digite sua idade" aria-label="Digite sua idade.." name="idade"
-                            required>
-                    </div>
-                    <div class="cadastro_cadlog">
-                        <label>Telefone</label>
-                        <input type="text" placeholder="Digite seu telefone..." aria-label="Digite seu telefone..."
-                            name="tel" required>
-                    </div>
-                    <div class="cadastro_cadlog">
-                        <label>CEP</label>
-                        <input type="text" placeholder="Digite seu CEP..." aria-label="Digite seu CEP..." name="cep"
-                            required>
-                    </div>
-                    <div class="cadastro_cadlog">
-                        <label>Endereço</label>
-                        <input type="text" placeholder="Digite seu endereço..." aria-label="Digite seu endereço..."
-                            name="endereco" required>
-                    </div>
-                    <div class="cadastro_cadlog">
-                        <label>Número</label>
-                        <input type="text" placeholder="Digite o número da casa..."
-                            aria-label="Digite o número da casa..." name="numero" required>
-                    </div>
-                    <div class="cadastro_cadlog">
-                        <label>Bairro</label>
-                        <input type="text" placeholder="Digite seu bairro..." aria-label="Digite seu bairro..."
-                            name="bairro" required>
-                    </div>
-                    <div class="cadastro_cadlog">
-                        <label>E-mail</label>
-                        <input type="email" placeholder="Digite seu e-mail..." aria-label="Digite seu e-mail..."
-                            name="email" required>
-                    </div>
-                    <div class="cadastro_cadlog">
-                        <label>Senha</label>
-                        <input type="password" placeholder="Digite sua senha..." aria-label="Digite sua senha..."
-                            name="senha" required>
-                    </div>
-                    <div class="btn_cadlog">
-                        <button type="submit"><b>CADASTRAR</b></button>
-                    </div>
-                </form>
-            </div> -->
         </div>
-        </div>
-    </div>
     </main>
     <footer>
         <p>SMART SALE ©2019</p>
